--- a/src/Components/global.css
+++ b/src/Components/global.css
@@ -1,14 +1,31 @@
 .bigNumber{
-    font-size: 30px;
+    font-size: 33px;
 }
 
 .circletext{
     font-family: "Nunito Sans";
-font-style: "SemiBold";
-font-size: 18px;
-line-height: 20px;
-line-height: 81%;
-/* align: "Center"; */
-vertical-align: "Top";
-letter-spacing: 0.22px;
+    font-style: "SemiBold";
+    font-size: 18px;
+    line-height: 20px;
+    line-height: 81%;
+    /* align: "Center"; */
+    vertical-align: "Top";
+    letter-spacing: 0.22px;
+}
+
+.text{
+    font-size: 18px;
+    color: #D8D8D8;
+    margin-top: 30px;
+}
+
+.number{
+    font-size: 30px;
+}
+
+.c-bottom{
+    color: #13322B;
+    font-style: bold;
+    font-size: 24px;
+    margin-top: 20px;
 }
